fix blurry image issues

--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -866,19 +866,12 @@ section,
   height: 100%;
   object-fit: cover;
   z-index: 1;
-}
-
-.hero .hero-bg::before {
-  content: "";
-  background: color-mix(in srgb, var(--background-color), transparent 15%);
-  position: absolute;
-  inset: 0;
-  z-index: 2;
+  filter: blur(2px);
 }
 
 .hero .container {
   position: relative;
-  z-index: 3;
+  z-index: 2;
 }
 
 .hero h1 {
@@ -886,14 +879,15 @@ section,
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
+  color: white;
 }
 
 .hero h1 span {
-  color: var(--accent-color);
+  color: white;
 }
 
 .hero p {
-  color: color-mix(in srgb, var(--default-color), transparent 30%);
+  color: color-mix(in srgb, white, transparent 30%);
   margin: 5px 0 30px 0;
   font-size: 20px;
   font-weight: 400;
@@ -929,7 +923,7 @@ section,
   font-size: 16px;
   transition: 0.5s;
   margin-left: 25px;
-  color: var(--default-color);
+  color: whitesmoke;
   font-weight: 600;
 }
 
